[tool.poetry]
name = "isavailable"
version = "0.1.2"
description = "Check Python package distribution name availability on PyPI"
authors = ["Felipe S. S. Schneider <schneider.felipe@posgrad.ufsc.br>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/schneiderfelipe/isavailable"
homepage = "https://github.com/schneiderfelipe/isavailable"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
bandit = "^1.7.0"
flake8 = "^4.0.1"
black = {version = "^24.3", allow-prereleases = true}
types-requests = "^2.25.11"

[tool.poetry.scripts]
isavailable = "isavailable:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
